<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="@dimen/_16dp"
    tools:context=".RegisterActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_arrowback"
        android:layout_marginTop="@dimen/_16dp"/>


    <TextView
        android:id="@+id/tv_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_started"
        android:textColor="#8BA849"
        android:layout_marginTop="@dimen/_16dp"
        android:textSize="@dimen/_40sp" />
    <TextView
        android:id="@+id/tv_second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/create_an_account"
        android:textColor="@android:color/black"
        android:textSize="@dimen/_20sp" />
    <EditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_25dp"
        android:drawablePadding="@dimen/_20dp"
        android:hint="@string/username"
        android:inputType="textPersonName" />
    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_25dp"
        android:drawablePadding="@dimen/_20dp"
        android:hint="@string/email"
        android:inputType="textWebEmailAddress" />
    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_25dp"
        android:drawablePadding="@dimen/_20dp"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/sign_in"
        android:background="@drawable/button"
        android:textColor="@android:color/white"
        android:textSize="20sp"/>


</LinearLayout>